--- a/src/app/taskList/TaskList.module.css
+++ b/src/app/taskList/TaskList.module.css
@@ -3,8 +3,13 @@
   flex-direction: column;
   gap: 5px;
   margin: 0 auto;
-  max-height: 100%;
+  height: 95vh;
 }
 
 .header {
+}
+
+.header h1 {
+  text-align: center;
+  font-size: 34px;
 }
