--- a/src/app/taskList/components/searchForm/SearchForm.module.css
+++ b/src/app/taskList/components/searchForm/SearchForm.module.css
@@ -19,7 +19,7 @@
   flex: 1;
 }
 
-.find {
+.searchForm .find {
   margin-left: 10px;
 }
 
@@ -28,11 +28,15 @@
     flex-direction: column;
   }
 
+  .searchForm > input {
+    min-height: 34px;
+  }
+
   .filterButtons {
     justify-content: space-between;
   }
 
-  .find {
+  .searchForm .find {
     margin: 0;
   }
 }
