--- a/src/app/taskList/components/task/Task.module.css
+++ b/src/app/taskList/components/task/Task.module.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
   align-items: flex-end;
   gap: 5px;
-  border-bottom: 1px solid rgba(33, 37, 41, 0.25);
+  border-bottom: 1px solid #7b68ee;
 }
 
 .main {
@@ -14,7 +14,7 @@
 
 .taskInteractionBtns {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   gap: 10px;
   margin-bottom: 1rem;
@@ -23,6 +23,7 @@
 @media (max-width: 768px) {
   .taskInteractionBtns {
     flex-direction: column;
+    margin: 0;
   }
 
   .taskInteractionBtns > button {
