--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -5,8 +5,13 @@ body,
 }
 
 .container {
+  padding-top: 20px;
   max-width: 620px;
   height: 100%;
+}
+
+button {
+  border: none;
 }
 
 input:active,
