--- a/src/app/taskList/components/list/List.module.css
+++ b/src/app/taskList/components/list/List.module.css
@@ -3,13 +3,9 @@
   flex-flow: column;
   max-height: 100%;
   overflow: auto;
+  overflow-x: hidden;
 }
 
 .tasks > :last-child {
   border: none;
-}
-
-.empty {
-  text-align: center;
-  height: 100%;
 }
