search to react hook form

--- a/src/app/taskList/components/task/Task.module.css
+++ b/src/app/taskList/components/task/Task.module.css
@@ -7,11 +7,14 @@
 
 .taskWrapper {
   display: flex;
-  /* justify-content: space-between; */
-  /* align-items: flex-end; */
+  gap: 5px;
+  justify-content: space-between;
+  align-items: flex-end;
 }
 
 .main {
+  word-break: break-all;
+  max-width: 430px;
   flex: 1;
 }
 
