errors and fetch task by id in form

--- a/src/app/taskForm/TaskForm.module.css
+++ b/src/app/taskForm/TaskForm.module.css
@@ -1,14 +1,15 @@
 .form {
   display: flex;
   flex-direction: column;
+  gap: 10px;
+}
+
+.head {
+  text-align: center;
 }
 
 .button {
   margin-top: 15px;
-}
-
-.error {
-  color: red;
 }
 
 .errorInput {
