--- a/src/app/taskList/components/list/List.module.css
+++ b/src/app/taskList/components/list/List.module.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-flow: column;
   max-height: 100%;
-  overflow: auto;
-  overflow-x: hidden;
+  /* overflow: auto; */
+  /* overflow-x: hidden; */
 }
 
 .tasks > :last-child {
